	Fixed: Unable to define custom APT repository without key ( Debian, Ubuntu )
	Removed: 'resolver' configuration item ( local DNS resolver question is part of 'named' configuration item )

TICKETS
	Fixed #1205: Good practices - Use "-h" as abbrev for "--help" (instead of "-?")
	Fixed #1206: Good practices - Install resolvconf only when bind9 is also installed

------------------------------------------------------------------------------------------------------------------------
1.2.0
------------------------------------------------------------------------------------------------------------------------

2014-12-30: Laurent Declercq
	RELEASE i-MSCP 1.2.0

DAEMON
	Fixed: The server traffic must be collected before any stopping attempt ( imscp_network )

CONFIGS
	Fixed: The time at which the backup script must be run is no configurable
	Renamed: /etc/imscp/hooks.d directory to /etc/imscp/listeners.d
	Removed: Roundcube configuration directory ( now shipped with the roundcube package )

DISTROS
	Removed: Support for obsolete Ubuntu versions ( Quantal Quetzal, Raring Ringtail, Saucy Salamander )

DOCS
	Updated: INSTALL files

ENGINE
	Added: FETCH_MODE option in iMSCP::Database::mysql
	Added: iMSCP::ProgramFinder module which allow to test whether programs are available on the executable search path
	Added: iMSCP::Service module for service management ( start, stop, restart, reload, status )
	Added: Methods which allow to enable/disable apache conffiles from the conf-available directory ( Apache 2.4.x )
	Added: pigz ( Parallel Implementation of GZip ) algorithm for backups compression
	Added: Standard directory which allow to load apache conffiles prior any other vhost file ( Apache )
	Added: --verbose command line options for all scripts
	Changed: i-MSCP is now run through a dedicated httpd instance by using the nginx Web server
	Changed: Logfiles are now written as soon as possible ( allows to mitigate memory consumption )